@@ -1,31 +1,47 @@
 package com.dpw.runner.shipment.services.syncing.impl;
 
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantContext;
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
+import com.dpw.runner.shipment.services.commons.constants.PartiesConstants;
+import com.dpw.runner.shipment.services.commons.requests.ListCommonRequest;
+import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsoleShipmentMappingDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IShipmentDao;
-import com.dpw.runner.shipment.services.dto.v1.response.V1DataSyncResponse;
-import com.dpw.runner.shipment.services.entity.ConsoleShipmentMapping;
-import com.dpw.runner.shipment.services.entity.ConsolidationDetails;
+import com.dpw.runner.shipment.services.dao.interfaces.ITruckDriverDetailsDao;
+import com.dpw.runner.shipment.services.entity.*;
+import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.helpers.JsonHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
+import com.dpw.runner.shipment.services.service.interfaces.ISyncService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
 import com.dpw.runner.shipment.services.syncing.Entity.*;
+import com.dpw.runner.shipment.services.syncing.Entity.ArrivalDepartureDetails;
 import com.dpw.runner.shipment.services.syncing.constants.SyncingConstants;
 import com.dpw.runner.shipment.services.syncing.interfaces.IConsolidationSync;
+import com.dpw.runner.shipment.services.utils.CommonUtils;
 import com.dpw.runner.shipment.services.utils.EmailServiceUtility;
+import com.dpw.runner.shipment.services.utils.StringUtility;
+import com.dpw.runner.shipment.services.utils.V1AuthHelper;
+import com.nimbusds.jose.util.Pair;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.retry.support.RetryTemplate;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
+
+import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
 
 @Service
 @Slf4j
@@ -53,7 +69,14 @@ public class ConsolidationSync implements IConsolidationSync {
 
     @Autowired
     private EmailServiceUtility emailServiceUtility;
-
+    @Autowired
+    private CommonUtils commonUtils;
+    @Autowired
+    private ISyncService syncService;
+    @Autowired
+    private ITruckDriverDetailsDao truckDriverDetailsDao;
+    @Autowired
+    private V1AuthHelper v1AuthHelper;
 
     private RetryTemplate retryTemplate = RetryTemplate.builder()
             .maxAttempts(3)
@@ -65,13 +88,32 @@ public class ConsolidationSync implements IConsolidationSync {
     private String CONSOLIDATION_V1_SYNC_URL;
 
     @Override
-    public ResponseEntity<?> sync(ConsolidationDetails request) {
-        CustomConsolidationRequest response = new CustomConsolidationRequest();
+    public ResponseEntity<IRunnerResponse> sync(ConsolidationDetails request, String transactionId, boolean isDirectSync) throws RunnerException {
+        CustomConsolidationRequest response = createConsoleSyncReq(request);
+        String consolidationRequest = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(response).module(SyncingConstants.CONSOLIDATION).build());
+        if (isDirectSync) {
+            HttpHeaders httpHeaders = v1AuthHelper.getHeadersForDataSyncFromKafka(UserContext.getUser().getUsername(), TenantContext.getCurrentTenant());
+            syncService.callSyncAsync(consolidationRequest, StringUtility.convertToString(request.getId()), StringUtility.convertToString(request.getGuid()), "Consolidation", httpHeaders);
+        }
+        else
+            syncService.pushToKafka(consolidationRequest, StringUtility.convertToString(request.getId()), StringUtility.convertToString(request.getGuid()), "Consolidation", transactionId);
+       return ResponseHelper.buildSuccessResponse(response);
+    }
 
-        response = modelMapper.map(request, CustomConsolidationRequest.class);
+    @Override
+    public void syncLockStatus(ConsolidationDetails consolidationDetails) {
+        LockSyncRequest lockSyncRequest = LockSyncRequest.builder().guid(consolidationDetails.getGuid()).lockStatus(consolidationDetails.getIsLocked()).build();
+        String finalCs = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(lockSyncRequest).module(SyncingConstants.CONSOLIDATION_LOCK).build());
+        syncService.pushToKafka(finalCs, String.valueOf(consolidationDetails.getId()), String.valueOf(consolidationDetails.getGuid()), "Consolidation Lock Sync", StringUtility.convertToString(consolidationDetails.getGuid()));
+    }
 
+    @Override
+    public CustomConsolidationRequest createConsoleSyncReq(ConsolidationDetails request) {
+        CustomConsolidationRequest response = modelMapper.map(request, CustomConsolidationRequest.class);
+
+        response.setSourceGuid(request.getSourceGuid());
         response.setLockedByUser(request.getLockedBy());
-
+        response.setMsnNumberStr(request.getMsnNumber());
         response.setShipmentType(request.getShipmentType());
         response.setCoLoadBookingRef(request.getCoLoadBookingReference());
         response.setType(request.getConsolidationType());
@@ -88,73 +130,54 @@ public class ConsolidationSync implements IConsolidationSync {
         response.setPlaceOfIssueString(request.getPlaceOfIssue());
 
         mapArrivalDepartureDetails(response, request);
-        mapTruckDriverDetail(response, request);
         mapPackings(response, request);
         mapJobs(response, request);
-        mapContainers(response, request);
+        response.setContainersList(syncEntityConversionService.containersV2ToV1(request.getContainersList()));
         response.setDocsList(convertToList(request.getFileRepoList(), FileRepoRequestV2.class));
+        response.setRoutingsList(syncEntityConversionService.routingsV2ToV1(request.getRoutingsList()));
+        response.setConsolidationAddresses(syncEntityConversionService.addressesV2ToV1(request.getConsolidationAddresses()));
+        if(response.getAutoUpdateGoodsDesc() == null)
+            response.setAutoUpdateGoodsDesc(false);
 
-        mapShipmentGuids(response, request);
+        List<ConsoleShipmentMapping> consoleShipmentMappings = consoleShipmentMappingDao.findByConsolidationId(request.getId());
+        if(consoleShipmentMappings != null && !consoleShipmentMappings.isEmpty()) {
+            List<Long> shipmentIds = consoleShipmentMappings.stream().map(ConsoleShipmentMapping::getShipmentId).collect(toList());
+            ListCommonRequest listReq = constructListCommonRequest("id", shipmentIds, "IN");
+            Pair<Specification<ShipmentDetails>, Pageable> pair1 = fetchData(listReq, ShipmentDetails.class);
+            Page<ShipmentDetails> shipmentDetailsPage = shipmentDao.findAll(pair1.getLeft(), pair1.getRight());
+            if(shipmentDetailsPage != null && !shipmentDetailsPage.isEmpty()) {
+                var map = shipmentDetailsPage.getContent().stream().collect(toMap(ShipmentDetails::getId, ShipmentDetails::getGuid));
+                response.setShipmentGuids(map.values().stream().toList());
+                mapTruckDriverDetail(response, request, shipmentIds, map);
+            }
+        }
+
+        if(request.getCreditor() != null && request.getCreditor().getIsAddressFreeText() != null && request.getCreditor().getIsAddressFreeText()){
+            response.setIsCreditorFreeTextAddress(true);
+            var rawData = request.getCreditor().getAddressData() != null ? request.getCreditor().getAddressData().get(PartiesConstants.RAW_DATA): null;
+            if(rawData!=null)
+                response.setCreditorFreeTextAddress(rawData.toString());
+        }
+        else  response.setIsCreditorFreeTextAddress(false);
+
+        if(request.getReceivingAgent() != null && request.getReceivingAgent().getIsAddressFreeText() != null && request.getReceivingAgent().getIsAddressFreeText()){
+            response.setIsReceivingAgentFreeTextAddress(true);
+            var rawData = request.getReceivingAgent().getAddressData() != null ? request.getReceivingAgent().getAddressData().get(PartiesConstants.RAW_DATA): null;
+            if(rawData!=null)
+                response.setReceivingAgentFreeTextAddress(rawData.toString());
+        }
+        else response.setIsReceivingAgentFreeTextAddress(false);
+
+        if(request.getSendingAgent() != null && request.getSendingAgent().getIsAddressFreeText() != null && request.getSendingAgent().getIsAddressFreeText()){
+            response.setIsSendingAgentFreeTextAddress(true);
+            var rawData = request.getSendingAgent().getAddressData() != null ? request.getSendingAgent().getAddressData().get(PartiesConstants.RAW_DATA): null;
+            if(rawData!=null)
+                response.setSendingAgentFreeTextAddress(rawData.toString());
+        }
+        else response.setIsSendingAgentFreeTextAddress(false);
 
         response.setGuid(request.getGuid());
-        String consolidationRequest = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(response).module(SyncingConstants.CONSOLIDATION).build());
-        return callSync(consolidationRequest, response, request.getId(), request.getGuid());
-    }
-
-    @Override
-    @Async
-    public void syncLockStatus(ConsolidationDetails consolidationDetails) {
-        LockSyncRequest lockSyncRequest = LockSyncRequest.builder().guid(consolidationDetails.getGuid()).lockStatus(consolidationDetails.getIsLocked()).build();
-        String finalCs = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(lockSyncRequest).module(SyncingConstants.CONSOLIDATION_LOCK).build());
-        retryTemplate.execute(ctx -> {
-            log.info("Current retry : {}", ctx.getRetryCount());
-            if (ctx.getLastThrowable() != null) {
-                log.error("V1 error -> {}", ctx.getLastThrowable().getMessage());
-            }
-            V1DataSyncResponse response_ = v1Service.v1DataSync(finalCs);
-            if (!response_.getIsSuccess()) {
-                try {
-                    emailServiceUtility.sendEmailForSyncEntity(String.valueOf(consolidationDetails.getId()), String.valueOf(consolidationDetails.getGuid()),
-                            "Consolidation Lock Sync", response_.getError().toString());
-                } catch (Exception ex) {
-                    log.error("Not able to send email for sync failure for Shipment Sync " + ex.getMessage());
-                }
-            }
-            return ResponseHelper.buildSuccessResponse(response_);
-        });
-    }
-
-    @Async
-    private ResponseEntity<?> callSync(String consolidationRequest, CustomConsolidationRequest response, Long id, UUID guid) {
-        retryTemplate.execute(ctx -> {
-            log.info("Current retry : {}", ctx.getRetryCount());
-            if (ctx.getLastThrowable() != null) {
-                log.error("V1 error -> {}", ctx.getLastThrowable().getMessage());
-            }
-
-            V1DataSyncResponse response_ = v1Service.v1DataSync(consolidationRequest);
-            if (!response_.getIsSuccess()) {
-                try {
-                    emailServiceUtility.sendEmailForSyncEntity(String.valueOf(id), String.valueOf(guid),
-                            "Consolidation", response_.getError().toString());
-                } catch (Exception ex) {
-                    log.error("Not able to send email for sync failure for Consolidation: " + ex.getMessage());
-                }
-            }
-            return ResponseHelper.buildSuccessResponse(response_);
-        });
-
-        return ResponseHelper.buildSuccessResponse(response);
-    }
-
-    private void mapShipmentGuids(CustomConsolidationRequest response, ConsolidationDetails request) {
-        List<ConsoleShipmentMapping> consoleShipmentMappings = consoleShipmentMappingDao.findByConsolidationId(request.getId());
-        List<UUID> req = consoleShipmentMappings.stream()
-                .map(item -> {
-                    return shipmentDao.findById(item.getShipmentId()).get().getGuid();
-                })
-                .collect(Collectors.toList());
-        response.setShipmentGuids(req);
+        return response;
     }
 
     private void mapJobs(CustomConsolidationRequest response, ConsolidationDetails request) {
@@ -168,47 +191,41 @@ public class ConsolidationSync implements IConsolidationSync {
                     modelMapper.map(item.getEventsList(), p.getEvents());
                     return p;
                 })
-                .collect(Collectors.toList());
+                .toList();
         response.setJobsList(req);
     }
 
     private void mapPackings(CustomConsolidationRequest response, ConsolidationDetails request) {
         if(request == null || request.getPackingList() == null)
             return;
-        List<PackingRequestV2> res = syncEntityConversionService.packingsV2ToV1(request.getPackingList(), request.getContainersList());
+        List<PackingRequestV2> res = syncEntityConversionService.packingsV2ToV1(request.getPackingList(), request.getContainersList(), null, request.getGuid());
         response.setPackingList(res);
     }
 
-    private void mapTruckDriverDetail(CustomConsolidationRequest response, ConsolidationDetails request) {
-        if(request == null || request.getTruckDriverDetails() == null)
-            return;
-        List<TruckDriverDetailsRequestV2> req = request.getTruckDriverDetails().stream()
+    private void mapTruckDriverDetail(CustomConsolidationRequest response, ConsolidationDetails request, List<Long> shipmentIds, Map<Long, UUID> map) {
+        List<TruckDriverDetails> truckDriverDetails = null;
+        ListCommonRequest listCommonRequest = constructListCommonRequest("shipmentId", shipmentIds, "IN");
+        Pair<Specification<TruckDriverDetails>, Pageable> pair = fetchData(listCommonRequest, TruckDriverDetails.class);
+        Page<TruckDriverDetails> truckDriverDetailsPage = truckDriverDetailsDao.findAll(pair.getLeft(), pair.getRight());
+        truckDriverDetails = truckDriverDetailsPage.stream().toList();
+        Map<Long, UUID> contMap = new HashMap<>();
+        if(request.getContainersList() != null && !request.getContainersList().isEmpty())
+            contMap = request.getContainersList().stream().collect(toMap(Containers::getId, Containers::getGuid));
+        Map<Long, UUID> finalContMap = contMap;
+        List<TruckDriverDetailsRequestV2> req = truckDriverDetails.stream()
                 .map(item -> {
                     TruckDriverDetailsRequestV2 t;
                     t = modelMapper.map(item, TruckDriverDetailsRequestV2.class);
-                    t.setTransporterNameOrg(item.getTransporterName());
-                    //ENUM
                     t.setTransporterTypeString(item.getTransporterType().toString());
+                    t.setConsolidationGuid(request.getGuid());
+                    if(item.getShipmentId() != null && map.containsKey(item.getShipmentId()))
+                        t.setShipmentGuid(map.get(item.getShipmentId()));
+                    if(item.getContainerId() != null && finalContMap.containsKey(item.getContainerId()))
+                        t.setContainerGuid(finalContMap.get(item.getContainerId()));
                     return t;
                 })
-                .collect(Collectors.toList());
+                .toList();
         response.setTruckDriverDetail(req);
-    }
-
-    private void mapContainers(CustomConsolidationRequest cs, ConsolidationDetails sd) {
-        if(sd.getContainersList() == null)
-            return;
-        List<ContainerRequestV2> res = sd.getContainersList().stream().map(
-                i -> {
-                    var containerRequestV2 = modelMapper.map(i, ContainerRequestV2.class);
-                    containerRequestV2.setIsHazardous(i.getHazardous());
-                    containerRequestV2.setDgClassString(i.getDgClass());
-                    containerRequestV2.setMarksnNums(i.getMarksNums());
-                    containerRequestV2.setContainerStuffingLocationName(i.getContainerStuffingLocation());
-                    return containerRequestV2;
-                }
-        ).toList();
-        cs.setContainersList(res);
     }
 
     private void mapCarrierDetails(CustomConsolidationRequest response, ConsolidationDetails request) {
@@ -220,6 +237,7 @@ public class ConsolidationSync implements IConsolidationSync {
         response.setFirstLoadString(request.getCarrierDetails().getOrigin());
         response.setOriginPortName(request.getCarrierDetails().getOriginPort());
         response.setCarrier(request.getCarrierDetails().getShippingLine());
+        response.setVoyageNumber(request.getCarrierDetails().getVoyage());
     }
 
     private void mapAchievedQuantities(CustomConsolidationRequest response, ConsolidationDetails request) {
@@ -295,7 +313,7 @@ public class ConsolidationSync implements IConsolidationSync {
             return null;
         return  lst.stream()
                 .map(item -> convertToClass(item, clazz))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private  <T,P> P convertToClass(T obj, Class<P> clazz) {
